# plotly

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  DESIGN.org  main.py  pyproject.toml
examples/: spike.rs
inkscape extensions/: axidraw_control.py  axidraw_naming.py  axidraw_svg_reorder.inx  axidraw_svg_reorder.py  eggbot_hatch.py  hershey_axi_ink1.inx  hershey_i.inx  idraw1_0.inx  idraw1_0_laser.inx  idraw1_0_laser_conf.py  idraw1_0_laser_control.py  idraw2_0.inx  idraw2_0_control.py  idraw2_0_laser.inx  idraw2_0_laser_conf.py  idraw2_0_laser_control.py  idraw2_naming.inx  idraw2_naming.py  idraw_HSE.inx  idraw_conf.py  idraw_control.py  idraw_plot_utils_import.py  plot_utils_import.py  process_ai.inx  process_ai.py
inkscape extensions/axidraw_deps/axidrawinternal/: __init__.py  axidraw.py  axidraw_conf.py  axidraw_control.py  axidraw_naming.py  axidraw_svg_reorder.py  boundsclip.py  clipping.py  digest_svg.py  dripfeed.py  motion.py  path_objects.py  pen_handling.py  plot_optimizations.py  plot_status.py  plot_utils_import.py  plot_warnings.py  preview.py  process_ai.py  serial_utils.py
inkscape extensions/axidraw_deps/axidrawinternal-3.9.5-py3.11.egg-info/: PKG-INFO  SOURCES.txt  installed-files.txt  requires.txt  top_level.txt
inkscape extensions/axidraw_deps/ink_extensions/: bezmisc.py  (+4 more)
src/: app.rs  cli.rs  keys.rs  lib.rs  logging.rs  main.rs  tui.rs
src/plotter/: driver.rs  handshake.rs  mock.rs  mod.rs  serial.rs  transport.rs
src/ui/: mod.rs  panels.rs
static/: app.js  index.html  style.css
tests/: connect.rs  console.rs  machine.rs  pen.rs
(+57 files in other folders)
