[package]
name = "plotly"
version = "0.1.0"
edition = "2021"
description = "TUI in Rust to drive an iDraw 2.0 pen plotter (DrawCore firmware)"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ctrlc = { version = "3.4", features = ["termination"] }
ratatui = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono"] }
tracing-appender = "0.2"
